# nba-db

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dagger.json  docker-compose.yml  nba_config.py  pyproject.toml  railway.toml
.dagger/: pyproject.toml
.dagger/src/nba_db_ci/: __init__.py  impact.py  main.py
.github/workflows/: ci.yml  maintenance.yml  refresh-data.yml  release-observer.yml
app/: db.py  main.py  middleware.py  models.py  shot_filters.py
app/static/: app.js  core.js  styles.css
app/templates/: index.html
data/clean/: team_box_scores.csv
data/clean/2020-21/: games.csv  player_game_stats.csv  team_game_stats.csv
data/clean/2021-22/: games.csv  player_game_stats.csv  team_game_stats.csv
data/clean/2022-23/: games.csv  player_game_stats.csv  team_game_stats.csv
data/clean/2023-24/: games.csv  player_game_stats.csv  team_game_stats.csv
data/clean/2024-25/: games.csv  player_game_stats.csv  team_game_stats.csv
data/clean/shared/: players.csv
data/raw/2020-21/: league_game_log_teams.json
data/raw/2021-22/: league_game_log_teams.json
data/raw/2022-23/: league_game_log_teams.json
data/raw/2023-24/: league_game_log_teams.json
data/raw/2024-25/: league_game_log_teams.json
data/raw/BoxScoreAdvancedV3/: 0022400001.json  0022400002.json  0022400003.json  0022400004.json  0022400005.json  0022400006.json  0022400007.json  0022400008.json  0022400009.json  0022400010.json  0022400011.json  0022400012.json  0022400013.json  0022400014.json  0022400015.json  0022400016.json  0022400017.json  0022400018.json  0022400019.json  0022400020.json  0022400021.json  0022400022.json  0022400023.json  0022400024.json  0022400025.json  0022400026.json  0022400027.json  0022400028.json  0022400029.json  0022400030.json  0022400031.json  0022400032.json  0022400033.json  0022400034.json  0022400035.json  0022400036.json  0022400037.json  0022400038.json  0022400039.json  0022400040.json  (+1190 more)
data/raw/BoxScoreTraditionalV3/: 0022400001.json  0022400002.json  0022400003.json  0022400004.json  0022400005.json  (+694 more)
db/: ERD.txt  config.py  dump.sql
db/schema/: 01_tables.sql  02_constraints.sql  03_indexes.sql  04_triggers.sql  05_views.sql  06_procedures.sql  07_fix_season_metadata.sql  08_shot_attempts.sql  09_single_season_provenance.sql
db/tests/: test_data_quality.py
docs/operations/: production-status.md
etl/: __init__.py  extract.py  load.py  official_verification.py  season_lifecycle.py  transform.py
scripts/: __init__.py  archive_dataset.py  check_docs.py  check_live.py  check_release.py  ci_impact.py  current_season.py  dagger_local_load.py  download_backup.py  init_db.py  restore_drill.py  upload_backup.py
tests/: conftest.py  test_api.py  test_artifact_archive.py  test_browser.py  test_check_live.py  test_check_release.py  test_ci_impact.py  test_current_season.py  test_dagger_workflows.py  test_data_quality_checks.py  test_db_config.py  test_etl_load.py  test_frontend_safety.py  test_middleware.py  test_operations_workflows.py  test_product_config.py  test_readonly_role.py  test_restore_drill.py  test_schema_migrations.py  test_season_lifecycle.py  test_shot_pipeline.py
(+2441 files in other folders)
