[project]
name = "nba-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basketball-reference-web-scraper>=4.15.4",
    "flask>=3.1.2",
    "nba-api>=1.11.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
