[project]
name = "nba-db"
version = "0.1.0"
description = "Verified 2025-26 NBA statistics API, dashboard, and shot-chart pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "nba-api>=1.11.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
ops = [
    "boto3>=1.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",
    "pytest>=9.1.1",
    "httpx>=0.28.1",
    "playwright>=1.50.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "httpx2>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"etl/load.py" = ["E402"]
"db/tests/test_data_quality.py" = ["E402"]
"scripts/init_db.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
